Fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,5 @@ body {
 }
 
 #steps {
-    display: inline-block;
-    margin-left: 50px;
+    margin-top: 110px;
 }
